--- a/StateMachine.uplugin
+++ b/StateMachine.uplugin
@@ -15,8 +15,18 @@
 	"Installed": true,
 	"Modules": [
 		{
-			"Name": "StateMachine",
+			"Name": "StateMachineRuntime",
 			"Type": "Runtime",
+			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "StateMachineEditor",
+			"Type": "Editor",
+			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "StateMachineTests",
+			"Type": "Editor",
 			"LoadingPhase": "Default"
 		}
 	]
